--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,6 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  font-family: "josefinSans";
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: "josefinSans", sans-serif;
 }
